refactor: 写出链路 bug 修复、重构及废弃 API 清理
写出链路修复（5 个 bug + 10 项重构）：
- A1: writeToSheetExcel 空/null list NPE
- A2: writeHeader null alias NPE
- A3: marshal OutValue.value 为 null 时 NPE
- A4: flush 异常时 wb/os 资源泄漏
- A5: createSXSSF(File) FileOutputStream 泄漏
- 重构: 抽取 resolveModelName、writeCSV 委托、getHeader 合并、
  ListLine 零拷贝 getter、marshal 跳过字段 FINE 日志
- 新增 WritePathRegressionTest 6 个回归测试

废弃 API 清理（净减 ~1400 行）：
- 移除 BingExcelEvent 全套事件 API（4 个类 + 3 个测试）
- 移除 ArrayConverter/CollectionConverter（死代码）
- 移除 builder()、getLocalConverter(Class,String)、
  ListRow.getList()、ExcelBuiltinFormats.getBuiltinFormats()
- 全量迁移 builder()→build()